--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>野中 尚輝</h1>
-<p>HP for Naoki Nonaka</p>
+<a href="./nonaka_tod.pdf">オンラインレビューから抽出した消費者の感情に寄与する素性を用いた自動車販売予測</a>
 </body>
 </html>
